# AerialyticTechnicalAssignment

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/solar/: models.py  solar_calculator.py  tests.py  urls.py  views.py
backend/solar/migrations/: 0001_initial.py
backend/solar_backend/: settings.py  urls.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CoordinateForm.tsx  LocationMap.tsx  ResultsDisplay.tsx  SolarPanelCalculator.tsx
frontend/src/types/: solar.ts
helm/: Chart.yaml  README.md  values.yaml
k8s/: README.md  backend-deployment.yaml  backend-hpa.yaml  configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  ingress.yaml  logging-efk.yaml  monitoring-prometheus.yaml  postgres-deployment.yaml
