[project]
name = "solar-backend"
version = "0.1.0"
description = "Django REST API for solar calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.2.3",
    "djangorestframework==3.16.0",
    "asgiref==3.8.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-django==4.7.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "isort==5.12.0",
]
